--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
 						<a href="#about" class="icon solid fa-file-alt"><span>About</span></a>
 						<a href="#links" class="icon solid fa-link"><span>Links</span></a>
+						<a href="https://sandyzikun.github.io/blog/about/#valine-comments" target="_blank" class="icon solid fa-comment-dots"><span>Comments</span></a>
 						<a href="https://github.com/sandyzikun/" target="_blank" class="icon brands fa-github-alt"><span>GitHub</span></a>
 					</nav>
 
@@ -38,7 +39,7 @@
 								</header>
 								<a href="#about" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>About me</span></span>
-									<img src="images/welt-edenstar.jpeg" alt="" />
+									<img src="images/snowdrop.jpeg" alt="" />
 								</a>
 							</article>
 
